2012-01-09  Gary Funck  <gary@intrepid.com>

	* upc-genericize.c (upc_expand_put): Use is_gimple_reg instead of
	is_gimple_non_addressable.

2012-01-06  Nenad Vukicevic <nenad@intrepid.com>

	* Make-lang.in: Add appropriate linker flags when linking
	gupc drivers.

2012-01-06  Nenad Vukicevic <nenad@intrepid.com>

	* Make-lang.in: Add appropriate linker flags when linking
	gupc drivers.

2011-12-31  Gary Funck  <gary@intrepid.com>

	Fix gupc driver to avoid segfault when processing
	invalid use of a switch that expects an argument.
	* gupc.c (get_libgupc_path): Add check for non-NULL value
	libgupc_archive before attempting to access libgupc_archive[0].
	(main): Do not issue error if lib_dir is NULL.  Instead, only
	process lib_dir if it is non-NULL.

2011-12-31  Gary Funck  <gary@intrepid.com>

	Improve -fupc-debug support.
	* upc-genericize.c (upc_expand_get, upc_expand_put,
	upc_genericize_sync_stmt): Add check for flag_upc_debug.
	* upc-pts-struct.c (upc_pts_struct_build_cvt): Ditto.
	* upc-pts-packed.c (upc_pts_packed_build_cvt): Ditto.
	* upc-act.c (upc_cpp_builtins): Disable inlining of the
	runtime if flag_upc_debug is asserted.

2011-11-22  Gary Funck  <gary@intrepid.com>

	* upc-act.c (upc_cpp_builtins): Generate new pre-defined
	macro: __GUPC__.

2011-11-19  Gary Funck  <gary@intrepid.com>

	* config-lang.in: Remove checks for supported targets.
	This is now done at a higher level.

2011-10-26  Gary Funck  <gary@intrepid.com>

	Rename "GCC/UPC" to "GNU UPC", "UPC" to "GUPC", and
	"libupc" to "libgupc".
	* gupc.c: Rename from upc-cmd.c and adjust for rename
	of libupc to libgupc.
	* upc-lang.c (LANG_HOOKS_NAME): Change "GCC UPC" to "GNU UPC".
	* config-lang.in: Adjust for rename of libupc to libgupc.
	* gupc.1: Rename from upc.1.  Change "GCC UPC" references to "GNU UPC".
	Adjust for rename of libupc to libgupc.  Improve formatting.
	* gupc-manpage.html: Rename from upc-manpage.html.  Re-generate.